third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/inline-table/linebreak-4.stderr
TOML parse error at line 1, column 14
  |
1 | json_like = {
  |              ^
invalid inline table
expected `}`
